<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="androidx.core.text.HtmlCompat" />

        <variable
            name="viewModel"
            type="com.technotackle.test.ui.login.LoginViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:src="@drawable/icon_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPhoneAuth"
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_96sdp"
            android:layout_marginTop="@dimen/_44sdp"
            android:background="@drawable/bg_phone_auth"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/icon_auth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPhoneAuth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/otpInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@{HtmlCompat.fromHtml(@string/otp_info(``), HtmlCompat.FROM_HTML_MODE_LEGACY)}"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/mobile_number"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpInfo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:digits="@string/numbers_only"
            android:inputType="number"
            android:letterSpacing="0.2"
            android:maxLength="10"
            android:paddingStart="@dimen/_36sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:text="@={viewModel.mobileNumber, default=123456}"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMobileNumber" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_login_btn"
            android:elevation="@dimen/_4sdp"
            android:onClick="onLoginClicked"
            android:src="@drawable/icon_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etMobileNumber" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvViewProductAsGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:text="@string/view_product_as_guest"
            android:textColor="@color/light_orange"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toTopOf="@+id/tvRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLetsGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:onClick="onLoginClicked"
            android:text="@string/lets_go"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintBottom_toBottomOf="@id/btnLogin"
            app:layout_constraintEnd_toStartOf="@id/btnLogin"
            app:layout_constraintTop_toTopOf="@id/btnLogin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/light_orange"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_16sdp"
            android:text="@string/register_message"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:text="@string/code"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@id/etMobileNumber"
            app:layout_constraintStart_toStartOf="@id/etMobileNumber"
            app:layout_constraintTop_toTopOf="@id/etMobileNumber" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

