<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="androidx.core.text.HtmlCompat" />

        <variable
            name="viewModel"
            type="com.technotackle.test.ui.verify_otp.OtpVerificationViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:src="@drawable/icon_app"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOtpConfirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/otp_confirmation"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintStart_toEndOf="@id/backArrow"
            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPhoneAuth"
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_96sdp"
            android:layout_marginTop="@dimen/_44sdp"
            android:background="@drawable/bg_phone_auth"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/icon_auth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOtpConfirmation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEnterOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/enter_otp"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPhoneAuth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/otpInfo"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@{HtmlCompat.fromHtml(` `+@string/otp_info(viewModel.mobileNumber), HtmlCompat.FROM_HTML_MODE_LEGACY)}"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEnterOtp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:digits="@string/numbers_only"
            android:inputType="number"
            android:gravity="center"
            android:letterSpacing="1.0"
            android:maxLength="4"
            android:text="@={viewModel.otp, default=123456}"
            android:textSize="@dimen/_18ssp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/otpInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_login_btn"
            android:elevation="@dimen/_4sdp"
            android:onClick="onLoginClicked"
            android:src="@drawable/icon_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etMobileNumber" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:onClick="onLoginClicked"
            android:layout_marginTop="@dimen/_2sdp"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvResendOtp"
            android:layout_width="0dp"
            android:gravity="center"
            android:paddingVertical="@dimen/_16sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:background="@color/light_orange"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/otp_not_received_message"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:id="@+id/backArrow"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_back_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

